# biblizap-frontend

./: Cargo.toml  index.html
css/: custom.css
js/: datatable.js
src/: common.rs  form.rs  legal.rs  main.rs  navbar.rs  table.rs  wall.rs
src/table/: article.rs  download.rs  filter.rs  footer.rs  mod.rs
