[package]
name = "biblizap-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.4.0"
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
shuffle = "0.1.7"
